--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjl/26y2s1rlma1SBH86Jv",
+      "authorship_tag": "ABX9TyOFLScNyE6YWd7KO4BdvQBl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,6 +86,50 @@
       "metadata": {
         "id": "0SxzQiq2YiDM"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Solicita ao usuario que insira o comprimento e a largura da camiseta\n",
+        "\n",
+        "\n",
+        "comprimento = float(input(\"Digite o comprimento da camiseta em centímetros:\"))\n",
+        "largura = float(input(\"Digite a largura da camiseta em centímetros:\"))\n",
+        "\n",
+        "if comprimento <= 60 and largura <= 45:\n",
+        "   tamanho = \"PP\"\n",
+        "elif comprimento <= 65 and largura <= 48:\n",
+        "   tamanho = \"P\"\n",
+        "elif comprimento <= 70 and largura <= 51:\n",
+        "   tamanho = \"M\"\n",
+        "elif comprimento <= 75 and largura <= 54:\n",
+        "   tamanho = \"G\"\n",
+        "elif comprimento <= 80 and largura <= 57:\n",
+        "   tamanho = \"GG\"\n",
+        "else:\n",
+        "  tamanho = \"XGG\"\n",
+        "\n",
+        "print(f\"O tamanho da camiseta é {tamanho}.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "je_G4-NobhxN",
+        "outputId": "aa47e991-e861-4ac8-b525-8a7015856914"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o comprimento da camiseta em centímetros:100\n",
+            "Digite a largura da camiseta em centímetros:101\n",
+            "O tamanho da camiseta é XGG.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
