--- a/untitled7.ipynb
+++ b/untitled7.ipynb
@@ -36,13 +36,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NEKlK5kdgVNW",
-        "outputId": "f7b1a29e-d546-4827-86aa-224d2a813e0e"
+        "outputId": "30d94ddb-1ac7-4dfc-ae71-3c5c0250c090"
       },
       "outputs": [
         {
@@ -59,6 +59,10 @@
             "5. bronze\n",
             "Digite a cor do kit evidence door: preto\n",
             "Digite a quantidade de vidro: 2\n",
+            "\n",
+            "=== Escolha modelo da fechadura ===\n",
+            "1. lateral\n",
+            "2. central\n",
             "Digite a possição da fechadura: lateral\n",
             "PERFIL EVIDENCE DOOR 8MM 200 / 2 vidro - preto\n"
           ]
@@ -78,42 +82,47 @@
         "Cor = input(\"Digite a cor do kit evidence door: \")\n",
         "Cor.lower\n",
         "while Cor in cores or Cor in numero_cor:\n",
+        " Vidro = float(input(\"Digite a quantidade de vidro: \"))\n",
+        " fechadura= [\"lateral\",\"central\"]\n",
+        " numero_cor= [1,2]\n",
+        " print(\"\\n=== Escolha modelo da fechadura ===\")\n",
+        " print(\"1. lateral\")\n",
+        " print(\"2. central\")\n",
+        " fechadura = input(\"Digite a possição da fechadura: \")\n",
+        " fechadura.lower\n",
+        " while fechadura in fechadura or fechadura in numero_fechadura:\n",
         "\n",
-        "  Vidro = float(input(\"Digite a quantidade de vidro: \"))\n",
-        "  fechadura = input(\"Digite a possição da fechadura: \")\n",
-        "\n",
-        "    # Função para exipbir o menu\n",
         "            # Determina o modelo do Kit com base nos dados solicitados.\n",
-        "  if Largura <= 150 and Cor == \"preto\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   if Largura <= 150 and Cor == \"preto\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 150 / 2 vidro - preto\")\n",
         "\n",
-        "  elif Largura <= 150 and Cor == \"branco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 150 and Cor == \"branco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 150 / 2 vidro - branco\")\n",
         "\n",
-        "  elif Largura <= 150 and Cor == \"fosco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 150 and Cor == \"fosco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 150 / 2 vidro - fosco\")\n",
         "\n",
-        "  elif Largura <= 150 and Cor == \"champanhe\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 150 and Cor == \"champanhe\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 150 / 2 vidro - champanhe\")\n",
         "\n",
-        "  elif Largura <= 150 and Cor == \"bronze\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 150 and Cor == \"bronze\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 150 / 2 vidro - bronze\")\n",
         "\n",
-        "  elif Largura <= 200 and Cor == \"preto\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 200 and Cor == \"preto\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 200 / 2 vidro - preto\")\n",
         "\n",
-        "  elif Largura <= 200 and Cor == \"branco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 200 and Cor == \"branco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 200 / 2 vidro - branco\")\n",
         "\n",
-        "  elif Largura <= 200 and Cor == \"fosco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 200 and Cor == \"fosco\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 200 / 2 vidro - fosco\")\n",
         "\n",
-        "  elif Largura <= 200 and Cor == \"champanhe\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 200 and Cor == \"champanhe\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM 200 / 2 vidro - champanhe\")\n",
         "\n",
-        "  elif Largura <= 200 and Cor == \"bronze\" and Vidro >= 2 and fechadura == \"lateral\":\n",
+        "   elif Largura <= 200 and Cor == \"bronze\" and Vidro >= 2 and fechadura == \"lateral\":\n",
         "                print(\"PERFIL EVIDENCE DOOR 8MM2050 / 2 vidro - bronze\")\n",
-        "  break"
+        "   break"
       ]
     },
     {
